--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,13 +12,15 @@
 name: "CodeQL"
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ main ]
-  schedule:
-    - cron: '45 2 * * 0'
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   # The branches below must be a subset of the branches above
+  #   branches: [ main ]
+  # schedule:
+  #   - cron: '45 2 * * 0'
+
+  workflow_dispatch: # Keeps it available for manual triggering from the GitHub UI.
 
 jobs:
   analyze:
@@ -39,7 +41,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
